# discord_bot

./: .env_example  .gitignore  Cargo.toml  README.md
src/: commands.rs  main.rs
