[package]
name = "discord_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
serenity = { version = "0.12.1", features = ["framework", "standard_framework", "client", "voice"]}
songbird = "0.4.1"
reqwest = { version = "0.11.27", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }